--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,40 +1,27 @@
-version: "2"
+version: "3.3"
 services:
   namenode:
     image: apache/hadoop:3
     container_name: namnode
     hostname: namenode
     ports:
-      - 9870:9870
+      - 9870:9870 
     env_file:
       - ./config
     environment:
       ENSURE_NAMENODE_DIR: "/tmp/hadoop-root/dfs/name"
     command: ["hdfs", "namenode"]
 
-  datanode_1:
+  datanode-1:
     image: apache/hadoop:3
-    container_name: datanode_1
-    command: [ "hdfs", "datanode" ]
-    env_file:
-      - ./config
-  datanode_2:
-    image: apache/hadoop:3
-    container_name: datanode_2
+    container_name: datanode-1
     command: [ "hdfs", "datanode" ]
     env_file:
       - ./config
 
-  datanode_3:
+  datanode-2:
     image: apache/hadoop:3
-    container_name: datanode_3
-    command: [ "hdfs", "datanode" ]
-    env_file:
-      - ./config
-
-  datanode_4:
-    image: apache/hadoop:3
-    container_name: datanode_4
+    container_name: datanode-2
     command: [ "hdfs", "datanode" ]
     env_file:
       - ./config
@@ -58,3 +45,63 @@ services:
     env_file:
       - ./config
 
+  spark-master:
+    image: cluster-apache-spark:3.0.2
+    container_name: spark-master
+    ports:
+      - "9090:8080"
+      - "7077:7077"
+    volumes:
+        - ./apps:/opt/spark-apps
+        - ./data:/opt/spark-data
+    environment:
+      - SPARK_LOCAL_IP=spark-master
+      - SPARK_WORKLOAD=master
+
+  spark-worker-1:
+    image: cluster-apache-spark:3.0.2
+    container_name: spark-worker-1
+    ports:
+      - "9091:8080"
+      - "7000:7000"
+    depends_on:
+      - spark-master
+    environment:
+      - SPARK_MASTER=spark://spark-master:7077
+      - SPARK_WORKER_CORES=1
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_DRIVER_MEMORY=1G
+      - SPARK_EXECUTOR_MEMORY=1G
+      - SPARK_WORKLOAD=worker
+      - SPARK_LOCAL_IP=spark-worker-1
+    volumes:
+        - ./apps:/opt/spark-apps
+        - ./data:/opt/spark-data
+
+  spark-worker-2:
+    image: cluster-apache-spark:3.0.2
+    container_name: spark-worker-2
+    ports:
+      - "9092:8080"
+      - "7001:7000"
+    depends_on:
+      - spark-master
+    environment:
+      - SPARK_MASTER=spark://spark-master:7077
+      - SPARK_WORKER_CORES=1
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_DRIVER_MEMORY=1G
+      - SPARK_EXECUTOR_MEMORY=1G
+      - SPARK_WORKLOAD=worker
+      - SPARK_LOCAL_IP=spark-worker-2
+    volumes:
+        - ./apps:/opt/spark-apps
+        - ./data:/opt/spark-data
+
+  postgresdb:
+    image: postgres:11.7-alpine
+    container_name: postgresdb
+    ports: 
+      - "5432:5432"
+    environment: 
+      - POSTGRES_PASSWORD=admin
