--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -105,3 +105,14 @@ services:
       - "5432:5432"
     environment: 
       - POSTGRES_PASSWORD=admin
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    depends_on:
+      - postgresdb
