--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.3"
 services:
   namenode:
     image: apache/hadoop:3
-    container_name: namnode
+    container_name: namenode
     hostname: namenode
     ports:
       - 9870:9870 
@@ -11,6 +11,9 @@ services:
     environment:
       ENSURE_NAMENODE_DIR: "/tmp/hadoop-root/dfs/name"
     command: ["hdfs", "namenode"]
+    volumes:
+      - ./hadoop-config:/opt/hadoop/etc/hadoop
+      - ./hadoop-config/log4j.properties:/opt/hadoop/etc/hadoop/log4j.properties
 
   datanode-1:
     image: apache/hadoop:3
@@ -18,6 +21,8 @@ services:
     command: [ "hdfs", "datanode" ]
     env_file:
       - ./config
+    volumes:
+      - ./hadoop-config:/opt/hadoop/etc/hadoop
 
   datanode-2:
     image: apache/hadoop:3
@@ -25,7 +30,9 @@ services:
     command: [ "hdfs", "datanode" ]
     env_file:
       - ./config
-
+    volumes:
+      - ./hadoop-config:/opt/hadoop/etc/hadoop
+      
   resourcemanager:
     image: apache/hadoop:3
     container_name: resourcemanager
@@ -54,6 +61,7 @@ services:
       - "9090:8080"
       - "7077:7077"
     volumes:
+        - ./hadoop-config:/opt/hadoop/etc/hadoop
         - ./src/spark/apps:/opt/spark-apps
         - ./src/spark/data:/opt/spark-data
         - ./src/spark/applications:/usr/local/spark/applications            
@@ -66,8 +74,6 @@ services:
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-    networks:
-      - airflow_network
 
   spark-worker-1:
     image: cluster-apache-spark:3.0.2
@@ -88,12 +94,11 @@ services:
       - SPARK_WORKLOAD=worker
       - SPARK_LOCAL_IP=spark-worker-1
     volumes:
+        - ./hadoop-config:/opt/hadoop/etc/hadoop
         - ./src/spark/apps:/opt/spark-apps
         - ./src/spark/data:/opt/spark-data
         - ./src/spark/applications:/usr/local/spark/applications            
         - ./src/spark/assets:/usr/local/spark/assets 
-    networks:
-      - airflow_network
 
   spark-worker-2:
     image: cluster-apache-spark:3.0.2
@@ -114,12 +119,11 @@ services:
       - SPARK_WORKLOAD=worker
       - SPARK_LOCAL_IP=spark-worker-2
     volumes:
+        - ./hadoop-config:/opt/hadoop/etc/hadoop
         - ./src/spark/apps:/opt/spark-apps
         - ./src/spark/data:/opt/spark-data
         - ./src/spark/applications:/usr/local/spark/applications            
         - ./src/spark/assets:/usr/local/spark/assets 
-    networks:
-      - airflow_network
 
   postgres:
     image: postgres:15
@@ -132,8 +136,6 @@ services:
       POSTGRES_DB: airflow
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
-    networks:
-      - airflow_network
 
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -149,8 +151,7 @@ services:
   redis:
     image: redis:latest
     container_name: redis
-    networks:
-      - airflow_network
+
 
   airflow-init:
     image: apache/airflow:2.7.1
@@ -172,8 +173,6 @@ services:
       airflow db init &&
       airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com
       "
-    networks:
-      - airflow_network
     restart: "no"
 
   airflow-webserver:
@@ -208,8 +207,7 @@ services:
         timeout: 30s
         retries: 3
     command: webserver
-    networks:
-        - airflow_network
+    
 
   airflow-scheduler:
     image: apache/airflow:2.7.1
@@ -227,8 +225,6 @@ services:
       - ./src/dags:/opt/airflow/dags
       - ./src/spark/applications:/usr/local/spark/applications            
       - ./src/spark/assets:/usr/local/spark/assets     
-    networks:
-      - airflow_network
     command: scheduler
 
   # airflow-worker:
@@ -247,7 +243,7 @@ services:
   #   command: celery worker
 
 networks:
-  airflow_network:
+  default:
     driver: bridge
 
 volumes:
